--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,9 @@ nav a {
   text-decoration: none;
   color: white;
 }
+
+nav a:hover {
+  border-bottom:2px orange solid;
+  font-size: 2em;
+  transition: .9s;
+}
