--- a/css/styles.css
+++ b/css/styles.css
@@ -25,3 +25,28 @@ main {
   display: flex;
   justify-content: center;
 }
+
+table {
+  margin: 0px auto;
+}
+
+td {
+  padding-right: 10px;
+  font-size: 1.3em;
+}
+
+td strong {
+  color: orange;
+}
+
+#table-header {
+  background-color: #351a00;
+}
+
+.table-row {
+  background-color: #753900;
+}
+
+.hobby{
+  color: yellow;
+}
